--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
          }
         </style>
         <div>
-            <img src="James/william.jpg" alt="">
-            <img src="James/moriarty.jpg" alt="">
-            <img src="James/Sharelock.jpg" alt="">
+            <img src="gambar/william.jpg" alt="">
+            <img src="gambar/moriarty.jpg" alt="">
+            <img src="gambar/Sharelock.jpg" alt="">
         </div>
     </div>
 
